Déplacement aléatoire des ennemis

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <div id="bomberman"></div>
             <div id="bomb"></div>
+            <div id="monster"></div>
         </div>
     </main>
 
