--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
             </div>
+            <div class="floor"></div>
             <div id="bomberman"></div>
             <div id="bomb"></div>
             <div id="monster"></div>
