--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <div><span id="time">05:00</span></div>
+        <div class="timer"><span id="time">05:00</span></div>
         <div id="map">
             <div class="wall">
 
@@ -21,6 +21,7 @@
             <div id="bomberman"></div>
             <div id="bomb"></div>
             <div id="monster"></div>
+            
         </div>
     </main>
 
