--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
     <main>
-        
+
         <div id="map">
-                <div class="timer"><span id="time">05:00</span></div>
+            <div class="timer">
+                <span id="time">05:00</span>
+            </div>
             <div class="wall">
 
 
@@ -21,8 +23,9 @@
             <div class="floor"></div>
             <div id="bomberman"></div>
             <div id="bomb"></div>
+            <div class ="explosion"></div>
             <div id="monster"></div>
-            
+
         </div>
     </main>
 
