--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div class="timer">
                 <span id="time">05:00</span>
             </div>
+            <div id="gameover" class="blink">Game over!</div>
+            
             <div class="wall">
 
 
@@ -27,6 +29,7 @@
             <div id="monster"></div>
 
         </div>
+        
     </main>
 
     <script src="assets/js/main.js"></script>
