--- a/index.html
+++ b/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
     <title>Document</title>
 </head>
-
 <body>
-    <main>
-
-        <div id="map">
-            <div class="timer">
-                <span id="time">05:00</span>
-            </div>
-            <div class="wall">
-
-
-            </div>
-            <div class="floor"></div>
-            <div id="bomberman"></div>
-            <div id="bomb"></div>
-            <div class ="explosion"></div>
-            <div id="monster"></div>
-
-        </div>
-    </main>
-
-    <script src="assets/js/main.js"></script>
+    <div class="panel">
+        <a class="tbut" href="./jeu.html"><input type="button" class="butt" name="PLAY "value="PLAY" /></a>
+    </div>
 </body>
-
 </html>
