--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-
+        <h1>bOOberman</h1>
         <div id="map">
             <div class="timer">
                 <span id="time">05:00</span>
