fix bêtises florian

--- a/jeu.html
+++ b/jeu.html
@@ -11,21 +11,17 @@
 
 <body>
     <main>
-
+        <h1>bOOberman</h1>
         <div id="map">
             <div class="timer">
                 <span id="time">05:00</span>
             </div>
-            <div class="wall">
-
-
-            </div>
+            <div id="gameover" class="blink">Game over!</div>
+            <div class="wall"></div>
             <div class="floor"></div>
             <div id="bomberman"></div>
             <div id="bomb"></div>
-            <div class ="explosion"></div>
             <div id="monster"></div>
-
         </div>
     </main>
     <script src="assets/js/main.js"></script>
