--- a/jeu.html
+++ b/jeu.html
@@ -22,7 +22,13 @@
             <div id="bomberman"></div>
             <div id="bomb"></div>
             <div id="monster"></div>
+            <div class="lifebar">
+                <img src="assets/medias/heart.png" alt="" class="heart1">
+                <img src="assets/medias/heart.png" alt="" class="heart2">
+                <img src="assets/medias/heart.png" alt="" class="heart3">
+            </div>
         </div>
+      
     </main>
     <script src="assets/js/main.js"></script>
 </body>
