ajout sons et fin de partie

--- a/jeu.html
+++ b/jeu.html
@@ -16,16 +16,16 @@
             <div class="timer">
                 <span id="time">05:00</span>
             </div>
-            <div id="gameover" class="blink">Game over!</div>
+            <div id="gameover" class="blink">Game over! <a class="replay" href="jeu.html">REJOUER</a></div>
             <div class="wall"></div>
             <div class="floor"></div>
             <div id="bomberman"></div>
             <div id="bomb"></div>
             <div id="monster"></div>
             <div class="lifebar">
+                <img src="assets/medias/heart.png" alt="" class="heart0">
                 <img src="assets/medias/heart.png" alt="" class="heart1">
                 <img src="assets/medias/heart.png" alt="" class="heart2">
-                <img src="assets/medias/heart.png" alt="" class="heart3">
             </div>
         </div>
       
