--- a/jeu.html
+++ b/jeu.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>bOOberman</h1>
+        <div class="logo-left"></div>
         <div id="map">
             <div class="timer">
                 <span id="time">05:00</span>
@@ -28,8 +28,9 @@
                 <img src="assets/medias/heart.png" alt="" class="heart2">
             </div>
         </div>
-      
+        <div class="logo-right"></div>
     </main>
+
     <script src="assets/js/main.js"></script>
 </body>
 
